@@ -3,6 +3,7 @@ package lotto;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class InputView {
     private final Scanner scanner = new Scanner(System.in);
@@ -17,6 +18,6 @@ public class InputView {
         return Arrays.stream(scanner.nextLine().split(","))
             .map(String::trim)
             .map(Integer::parseInt)
-            .toList();
+            .collect(Collectors.toList());
     }
 }
